mType/tests/testFiles/annotation/error/script_annotation_abstract_error.mt
// Error: @Script on abstract class

@Script
abstract class Entity {
    int x;

    constructor() {
        x = 0;
    }

    function update(float dt): void {
        x = x + 1;
    }

    abstract function move(): void;
}
